changelog and get-orig-tarball fixed
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@215 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,72 +1,5 @@
-sympy (0.5.5-1) unstable; urgency=low
+cython (0.9.6.8.ds-1~oc1) UNRELEASED; urgency=low
 
-  * New upstream version
-  * The long description improved to include the word "manipulation", which
-    applies to this package
+  * Initial Debian upload
 
- -- Ondrej Certik <ondrej@certik.cz>  Sat, 20 Oct 2007 23:49:03 +0200
-
-sympy (0.5.4-1) unstable; urgency=low
-
-  * New upstream release
-  * Homepage field added
-  * Rename XS-Vcs-* fields to Vcs-* (dpkg supports them now)
-
- -- Ondrej Certik <ondrej@certik.cz>  Sat, 06 Oct 2007 22:33:33 +0200
-
-sympy (0.5.3-1) unstable; urgency=low
-
-  * New upstream release 
-
- -- Ondrej Certik <ondrej@certik.cz>  Fri, 14 Sep 2007 16:54:48 +0200
-
-sympy (0.5.2-1) unstable; urgency=low
-
-  * New upstream release
-  * Removing linda override, since it doesn't stop linda from complaining
-  * Removing tests from /usr/share/doc/python-sympy/tests (upstream ships them
-    inside the site-packages dir, we simply remove them in the Debian package)
-  * Not building man page, since upstream ships it by default
-  * Removing the dependency on python-libxslt1 and python-libxml2 since the
-    upstream no longer depends on them
-  * Added python-imaging and python-ctypes to Depends (for pyglet module)
-
- -- Ondrej Certik <ondrej@certik.cz>  Tue, 21 Aug 2007 18:59:54 -0700
-
-sympy (0.4.2-1) unstable; urgency=low
-
-  * New upstream release. 
-
- -- Ondrej Certik <ondrej@certik.cz>  Sun, 08 Jul 2007 03:23:19 +0200
-
-sympy (0.4.1-1) unstable; urgency=low
-
-  * New upstream version.
-  * added tests to /usr/share/doc/python-sympy/tests/
-  * added SymPy's logo to /usr/share/pixmaps
-  * debian/python-sympy.linda-overrides: added
-  * Added python-opengl to Recommends
-
- -- Ondrej Certik <ondrej@certik.cz>  Tue, 19 Jun 2007 11:25:37 +0200
-
-sympy (0.4.0-1) unstable; urgency=low
-
-  * New upstream version.
-  * changed the long description according to the upstream webpage
-  * put all upstream authors, the creator and the license of the SymPy's logo
-    into the copyright file
-
- -- Ondrej Certik <ondrej@certik.cz>  Mon, 18 Jun 2007 17:41:34 +0200
-
-sympy (0.4~pre+svn780-2) unstable; urgency=low
-
-  * Added Debian Python Modules Team to Uploaders
-  * Changed "XS-Python-Version: all" to "XS-Python-Version: >=2.4"
-
- -- Ondrej Certik <ondrej@certik.cz>  Wed, 16 May 2007 12:51:06 +0200
-
-sympy (0.4~pre+svn780-1) unstable; urgency=low
-
-  * Initial Debian release (closes: #418410) 
-
- -- Ondrej Certik <ondrej@certik.cz>  Sun, 13 May 2007 17:52:55 +0200
+ -- Ondrej Certik <ondrej@certik.cz>  Mon, 12 Nov 2007 23:23:42 +0000
