--- a/changelog
+++ b/changelog
@@ -1,10 +1,11 @@
-cython (0.9.6.8.ds-1~oc3) UNRELEASED; urgency=low
+cython (0.9.6.8.ds-1~oc4) UNRELEASED; urgency=low
 
   [ Ondrej Certik ]
   * Initial Debian upload
+  * Added a patch for handling the @classmethod decorators
 
   [ Sandro Tosi ]
   * debian/watch
     - added missing file
 
- -- Sandro Tosi <matrixhasu@gmail.com>  Sun, 25 Nov 2007 20:01:19 +0100
+ -- Ondrej Certik <ondrej@certik.cz>  Fri, 30 Nov 2007 13:00:44 +0100
