a bug number added
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@330 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 cython (0.9.6.8.ds-1~oc4) UNRELEASED; urgency=low
 
   [ Ondrej Certik ]
-  * Initial Debian upload
+  * Initial Debian upload (Closes: 451039)
   * Added a patch for handling the @classmethod decorators
 
   [ Sandro Tosi ]
