man page modified
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@340 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/cython.1
+++ b/cython.1
@@ -40,5 +40,5 @@ The HTML documentation explains this better, and the Demo examples show how
 to automate the compile and link stages more easily. 
 .SH AUTHOR
 This manual page was written by Peter Harris <scav@blueyonder.co.uk>, for the
-Debian GNU/Linux system (but may be used by others) and cython package. Modified
-by Ondrej Certik <ondrej@certik.cz> for the Cython package.
+Debian GNU/Linux system (but may be used by others) and the pyrex package.
+Modified by Ondrej Certik <ondrej@certik.cz> for the Cython package.
