--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 cython (0.9.6.8.ds-2) unstable; urgency=low
 
   * DM-Upload-Allowed changed to XS-Upload-Allowed 
+  * Update Standards-Version to 3.7.3.
 
  -- Ondrej Certik <ondrej@certik.cz>  Tue, 04 Dec 2007 22:25:48 +0100
 
