--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@ cython (0.9.6.8.ds-2) unstable; urgency=low
   * Build-depend on python instead of python-all-dev
   * ${misc:Depends} added to Depends
   * Depend on debhelper >= 5.0.38
+  * gcc added to Suggests
 
  -- Ondrej Certik <ondrej@certik.cz>  Sat, 22 Dec 2007 22:12:00 +0100
 
