Use -fPIC in the gcc commands example in README.Debian
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@449 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ cython (0.9.6.8.ds-2) unstable; urgency=low
   * ${misc:Depends} added to Depends
   * Depend on debhelper >= 5.0.38
   * gcc added to Suggests
+  * README.Debian gcc command fixed by adding -fPIC
 
  -- Ondrej Certik <ondrej@certik.cz>  Sat, 22 Dec 2007 22:12:00 +0100
 
