fixed watch file path
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@490 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,5 +1,9 @@
 cython (0.9.6.10.ds-1) unstable; urgency=low
 
+  [ Marco Rodrigues ]
+  * Fixed watch file path.
+
+  [ Ondrej Certik ]
   * New upstream version
   * Moved from pycentral to pysupport
   * removed patches, since upstream has integrated them
