add Closes to bug report
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@494 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -2,7 +2,7 @@ cython (0.9.6.10.ds-2) UNRELEASED; urgency=low
 
   [ Marco Rodrigues ]
   * debian/watch:
-    + Fixed path.
+    + Fixed path (Closes: #460006).
   * debian/control:
     + Bump cdbs version to matches policy.
 
