new upstream version packaged
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@543 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-cython (0.9.6.10.ds-2) UNRELEASED; urgency=low
+cython (0.9.6.11.ds-1) unstable; urgency=low
 
   [ Marco Rodrigues ]
   * debian/watch:
@@ -6,7 +6,10 @@ cython (0.9.6.10.ds-2) UNRELEASED; urgency=low
   * debian/control:
     + Bump cdbs version to matches policy.
 
- -- Ondrej Certik <ondrej@certik.cz>  Thu, 10 Jan 2008 11:48:25 +0000
+  [ Ondrej Certik ]
+  * New upstream version 
+
+ -- Ondrej Certik <ondrej@certik.cz>  Fri, 18 Jan 2008 00:21:42 +0100
 
 cython (0.9.6.10.ds-1) unstable; urgency=low
 
