--- a/changelog
+++ b/changelog
@@ -1,8 +1,9 @@
 cython (0.9.6.14-1) unstable; urgency=low
 
-  * New upstream version.
-  * Description improved (SAGE -> Sage), whitespace removed.
-  * Standards-Version bumped (no change needed).
+  * New upstream version
+  * Description improved (SAGE -> Sage), whitespace removed
+  * Standards-Version bumped (no change needed)
+  * README.Debian updated to recent cython way of doing things
 
  -- Ondrej Certik <ondrej@certik.cz>  Wed, 11 Jun 2008 13:22:09 +0200
 
