--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.9.8-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Ondrej Certik <ondrej@certik.cz>  Sun, 20 Jul 2008 12:43:45 +0200
+
 cython (0.9.6.14-1) unstable; urgency=low
 
   * New upstream version
