new upstream release
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@1585 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 cython (0.9.8-1) unstable; urgency=low
 
   * New upstream release
+  * python-all-dev added to build-depends (upstream now compiles
+    Cython.Plex.Scanners with Cython)
+  * Architecture changed to any since we now build an .so library
 
  -- Ondrej Certik <ondrej@certik.cz>  Sun, 20 Jul 2008 12:43:45 +0200
 
