--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.10.3-1) unstable; urgency=low
+
+  * New upstream release
+  * debian/watch: corrected regexp
+
+ -- Vernon Tang <vt@foilhead.net>  Tue, 20 Jan 2009 03:11:08 +0800
+
 cython (0.10.2-1) unstable; urgency=low
 
   [ Sandro Tosi ]
