New upstream release, don't upload though, binary files are getting modified when 'python2.5 setup.py clean -a' gets called during the generation of the source package
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@3194 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+cython (0.11.2-1) UNRELEASED; urgency=low
+
+  * (DON'T UPLOAD) --- something fishy going on, binary files (.pickle) are
+    getting modified when "python2.5 setup.py clean -a" gets run. My
+    uneducated guess is that this wasn't run before upstream's tarball was
+    generated. Feel free to upload if you fix it.
+  * New upstream release (Closes: #525620)
+
+ -- Ryan Kavanagh <ryanakca@kubuntu.org>  Fri, 26 Jun 2009 16:32:00 -0400
+
 cython (0.10.3-1) unstable; urgency=low
 
   [ Vernon Tang ]
