--- a/changelog
+++ b/changelog
@@ -1,10 +1,10 @@
 cython (0.11.2-1) UNRELEASED; urgency=low
 
-  * (DON'T UPLOAD) --- something fishy going on, binary files (.pickle) are
-    getting modified when "python2.5 setup.py clean -a" gets run. My
-    uneducated guess is that this wasn't run before upstream's tarball was
-    generated. Feel free to upload if you fix it.
+  [ Ryan Kavanagh ]
   * New upstream release (Closes: #525620)
+
+  [ Jakub Wilk ]
+  * debian/rules: remove generated files.
 
  -- Ryan Kavanagh <ryanakca@kubuntu.org>  Fri, 26 Jun 2009 16:32:00 -0400
 
