New upstream release fixes #536213, too.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@3417 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 cython (0.11.2-1) UNRELEASED; urgency=low
 
   [ Ryan Kavanagh ]
-  * New upstream release (Closes: #525620)
+  * New upstream release (Closes: #525620, #536213)
 
   [ Jakub Wilk ]
   * debian/rules: remove generated files.
