--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.12.1-1.1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * Introducing cython-dbg (Closes: #541314)
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 05 May 2010 14:11:54 -0400
+
 cython (0.12.1-1) unstable; urgency=low
 
   [ Kirill Smelkov ]
