--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.13-1) experimental; urgency=low
+
+  * New upstream release
+  * debian/control: added myself to Uploaders
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 26 Sep 2010 14:28:34 -0400
+
 cython (0.12.1-1.1) unstable; urgency=low
 
   * Non-maintainer upload.
