Run unittests against default Python version during build
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@6664 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.14.1-2) unstable; urgency=low
+
+  * Run unittests against default Python version during build
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 15 Feb 2011 13:35:52 -0500
+
 cython (0.14.1-1) unstable; urgency=low
 
   * Reincarnating uploads to unstable
