adopting patch from upstream: fix makefile for embed testcase
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@6667 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,6 +1,8 @@
 cython (0.14.1-2) unstable; urgency=low
 
   * Run unittests against default Python version during build
+    - Adopted 0001-fix-makefile-for-embed-testcase.patch from upstream
+      for embedded test to perform correctly
   * Added numpy and profiler into Build-Depends to facilitate all tests above
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 15 Feb 2011 13:35:52 -0500
