--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+cython (0.14.1-4) unstable; urgency=low
+
+  * Cherry-picked from upstream:
+    - 0001-fix-inline-textcase-to-not-use-default-HOME-.cython-.patch
+      (Closes: #613989)
+    - 0001-fix-testcases-assuming-char-is-signed-thanks-to-Yaro.patch
+      (Closes: #613993)
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 18 Feb 2011 17:21:26 -0500
+
 cython (0.14.1-3) unstable; urgency=low
 
   * Remove python-profiler from Build-Depends: it is non-free
