--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.14.1-6) unstable; urgency=low
+
+  * Team upload.
+  * Un-version python in shebangs with sed. (Closes: #577143)
+
+ -- Stefano Rivera <stefanor@debian.org>  Mon, 25 Apr 2011 10:21:06 +0200
+
 cython (0.14.1-5) unstable; urgency=low
 
   * Cherry-picked from upstream:
