Fix shebang before dh_pysupport is called, to remove unnecessary Dependencies.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@7140 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.14.1-7) UNRELEASED; urgency=low
+
+  * Fix shebang before dh_pysupport is called, to remove unnecessary
+    Dependencies.
+
+ -- Stefano Rivera <stefanor@debian.org>  Thu, 02 Jun 2011 16:59:09 +0200
+
 cython (0.14.1-6) unstable; urgency=low
 
   * Team upload.
