Standards-Version bumped to 3.9.2 (no change needed)
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@7560 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -15,6 +15,8 @@ cython (0.15.1~rc1-1) unstable; urgency=low
   [ Yaroslav Halchenko ]
   * debian/rules: Disabled assure-changelogs target for this release
     since no changelogs were compiled by upstream (yet)
+  * Standards-Version bumped to 3.9.2 (no change needed)
+
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 18 Sep 2011 22:47:28 -0400
 
