Strip CRs from upstream changelogs.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@7565 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelogs/ReleaseNotes-0.12.1
+++ b/changelogs/ReleaseNotes-0.12.1
@@ -1,4 +1,4 @@
-Fetched from http://wiki.cython.org/ReleaseNotes-0.12.1 on Wed Sep 29 11:06:57 EDT 2010
+Fetched from http://wiki.cython.org/ReleaseNotes-0.12.1 on Tue Sep 20 16:54:48 CEST 2011
 
 = Cython 0.12.1 =
  * Release date: February 2, 2010
@@ -36,3 +36,5 @@ Several other bugs and minor improvements have been made. This release should be
 Thanks also to the many who've submitted feedback and contributed to discussions on the mailing list.
 
 http://trac.cython.org/cython_trac/query?group=component&milestone=0.12.1
+----
+CategoryReleaseNotes
