--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.15.1-2) UNRELEASED; urgency=low
+
+  * Strip CRs from upstream changelogs.
+
+ -- Jakub Wilk <jwilk@debian.org>  Tue, 20 Sep 2011 16:59:00 +0200
+
 cython (0.15.1-1) unstable; urgency=low
 
   [ Nikolaus Rath ]
