--- a/changelogs/ReleaseNotes-0.11.2
+++ b/changelogs/ReleaseNotes-0.11.2
@@ -1,4 +1,4 @@
-Fetched from http://wiki.cython.org/ReleaseNotes-0.11.2 on Wed Sep 29 11:06:58 EDT 2010
+Fetched from http://wiki.cython.org/ReleaseNotes-0.11.2 on Tue Sep 20 16:54:49 CEST 2011
 
 = Cython 0.11.2 =
  * Release date: May 20th 2009
@@ -38,3 +38,5 @@ mailing list.
 
 
 -- Dag Sverre Seljebotn
+----
+CategoryReleaseNotes
