--- a/changelogs/ReleaseNotes-0.14.1
+++ b/changelogs/ReleaseNotes-0.14.1
@@ -1,4 +1,4 @@
-Fetched from http://wiki.cython.org/ReleaseNotes-0.14.1 on Sun Feb 13 09:48:15 EST 2011
+Fetched from http://wiki.cython.org/ReleaseNotes-0.14.1 on Tue Sep 20 16:54:45 CEST 2011
 
 = Cython 0.14.1 =
  * Release date: February 4, 2011
@@ -34,4 +34,6 @@ Many people contributed to this release, including:
  * W. Trevor King
  * Vitja Makarov
 
-A special thanks also to the many people who did testing and contributed useful bug reports. 
+A special thanks also to the many people who did testing and contributed useful bug reports.
+----
+CategoryReleaseNotes
