--- a/changelog
+++ b/changelog
@@ -1,8 +1,14 @@
-cython (0.15.1-2) UNRELEASED; urgency=low
+cython (0.15.1-2) unstable; urgency=low
 
+  [ Jakub Wilk ]
   * Strip CRs from upstream changelogs.
 
- -- Jakub Wilk <jwilk@debian.org>  Tue, 20 Sep 2011 16:59:00 +0200
+  [ Barry Warsaw ]
+  * debian/patches/python27-testsuite-fix.patch:
+    Fix test suite for Python 2.7 change.  Patch comes from Cython
+    upstream, post 0.15.1 release.  (Closes: #651996)
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 07 Jan 2012 12:32:25 -0500
 
 cython (0.15.1-1) unstable; urgency=low
 
