--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.15.1-3) unstable; urgency=low
+
+  * Change build system to dh_python2
+  * Bump Standards-Version to 3.9.3
+
+ -- Bradley M. Froehle <brad.froehle@gmail.com>  Tue, 22 May 2012 17:49:14 -0700
+
 cython (0.15.1-2) unstable; urgency=low
 
   [ Jakub Wilk ]
