--- a/changelog
+++ b/changelog
@@ -2,8 +2,9 @@ cython (0.15.1-3) unstable; urgency=low
 
   * Change build system to dh_python2
   * Bump Standards-Version to 3.9.3
+  * Provide Python 3 package
 
- -- Bradley M. Froehle <brad.froehle@gmail.com>  Tue, 22 May 2012 17:49:14 -0700
+ -- Bradley M. Froehle <brad.froehle@gmail.com>  Tue, 22 May 2012 18:21:02 -0700
 
 cython (0.15.1-2) unstable; urgency=low
 
