--- a/changelog
+++ b/changelog
@@ -1,10 +1,13 @@
 cython (0.15.1-3) unstable; urgency=low
 
-  * Change build system to dh_python2
+  [ Bradley M. Froehle ]
+  * Switch from cdbs to dh7
+  * Change build system to dh_python2 (Closes: #677405).
+    Thanks also to Julian Taylor for an alternative patch
+  * Provide Python 3 package -- cython3 (Closes: #674073)
   * Bump Standards-Version to 3.9.3
-  * Provide Python 3 package
 
- -- Bradley M. Froehle <brad.froehle@gmail.com>  Tue, 22 May 2012 18:21:02 -0700
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 30 Jun 2012 11:44:24 -0400
 
 cython (0.15.1-2) unstable; urgency=low
 
