--- a/changelog
+++ b/changelog
@@ -7,7 +7,10 @@ cython (0.15.1-3) unstable; urgency=low
   * Provide Python 3 package -- cython3 (Closes: #674073)
   * Bump Standards-Version to 3.9.3
 
- -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 30 Jun 2012 11:44:24 -0400
+  [ Yaroslav Halchenko ]
+  * "stings" typo patch, Thanks Jakub Wilk (Closes: #679359)
+  
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 30 Jun 2012 12:13:28 -0400
 
 cython (0.15.1-2) unstable; urgency=low
 
