--- a/changelogs/ReleaseNotes-0.11.2
+++ b/changelogs/ReleaseNotes-0.11.2
@@ -1,5 +1,4 @@
-Fetched from http://wiki.cython.org/ReleaseNotes-0.11.2 on Tue Sep 20 16:54:49 CEST 2011
-
+Fetched from http://wiki.cython.org/ReleaseNotes-0.11.2 on Sat Jun 30 12:28:30 EDT 2012\n
 = Cython 0.11.2 =
  * Release date: May 20th 2009
 
