--- a/changelogs/ReleaseNotes-0.12.1
+++ b/changelogs/ReleaseNotes-0.12.1
@@ -1,5 +1,4 @@
-Fetched from http://wiki.cython.org/ReleaseNotes-0.12.1 on Tue Sep 20 16:54:48 CEST 2011
-
+Fetched from http://wiki.cython.org/ReleaseNotes-0.12.1 on Sat Jun 30 12:28:29 EDT 2012\n
 = Cython 0.12.1 =
  * Release date: February 2, 2010
  * Download: http://cython.org/release/Cython-0.12.1.tar.gz http://cython.org/release/Cython-0.12.1.zip
