--- a/changelogs/ReleaseNotes-0.14.1
+++ b/changelogs/ReleaseNotes-0.14.1
@@ -1,5 +1,4 @@
-Fetched from http://wiki.cython.org/ReleaseNotes-0.14.1 on Tue Sep 20 16:54:45 CEST 2011
-
+Fetched from http://wiki.cython.org/ReleaseNotes-0.14.1 on Sat Jun 30 12:28:28 EDT 2012\n
 = Cython 0.14.1 =
  * Release date: February 4, 2011
  * Download: http://cython.org/release/Cython-0.14.1.tar.gz
