--- a/changelogs/ReleaseNotes-0.15.1
+++ b/changelogs/ReleaseNotes-0.15.1
@@ -1,3 +1,4 @@
+Fetched from http://wiki.cython.org/ReleaseNotes-0.15.1 on Sat Jun 30 12:28:27 EDT 2012\n
 = Cython 0.15.1 =
  * Release date: September 19, 2011
  * Download: http://cython.org/release/Cython-0.15.1.tar.gz
@@ -25,4 +26,3 @@ Yury V. Zaytsev
 
 ----
 CategoryReleaseNotes
-
