dropping patches deb_tempdisable_numpy_doctests, python27-testsuite-fix.patch
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@8948 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ cython (0.16-1) unstable; urgency=low
 
   * Fresh upstream release (Closes: #671070)
     - required to BFS for new python-pymtp
+    - dropping patches deb_tempdisable_numpy_doctests, python27-testsuite-fix.patch
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 30 Jun 2012 12:34:14 -0400
 
