--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 cython (0.16-1) experimental; urgency=low
 
   * Fresh upstream release (Closes: #671070)
+    - compatibile with changed __import__ in Python 3.3 (Closes: #681697)
     - required to BFS for new python-pymtp
     - dropping patches deb_tempdisable_numpy_doctests, python27-testsuite-fix.patch
     - excluding parallel tests since they fail ATM (reported/known upstream)
