Bringing back cython3 packaging
Original Revert "Since we have no time to go through NEW queue atm -- no
cython3* for now" was with hope to upload the other changes against 0.15-3
before the freeze... but that did not happen, so now it is time to bring cython3 back

This reverts commit 0c0bc8e7071688df3f6294fbe0006e39c87eaeec.

git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@8959 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.16-2) UNRELEASED; urgency=low
+
+  [ Bradley M. Froehle ]
+  * Provide Python 3 package -- cython3 (Closes: #674073)
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 18 Jul 2012 20:53:13 -0400
+
 cython (0.16-1) experimental; urgency=low
 
   [ Bradley M. Froehle ]
