export HOME=$(CURDIR)/build to not rely on user's writable HOME (was triggered by some tests leading to FTBFS)
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@8970 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -3,7 +3,11 @@ cython (0.16-2) UNRELEASED; urgency=low
   [ Bradley M. Froehle ]
   * Provide Python 3 package -- cython3 (Closes: #674073)
 
- -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 18 Jul 2012 20:53:13 -0400
+  [ Yaroslav Halchenko ]
+  * export HOME=$(CURDIR)/build to not rely on user's writable HOME
+    (was triggered by some tests leading to FTBFS)
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 18 Jul 2012 21:41:44 -0400
 
 cython (0.16-1) experimental; urgency=low
 
