changelog entry for 0.17~beta1-1
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@8972 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,11 +1,15 @@
-cython (0.16-2) UNRELEASED; urgency=low
+cython (0.17~beta1-1) experimental; urgency=low
 
   [ Bradley M. Froehle ]
   * Provide Python 3 package -- cython3 (Closes: #674073)
 
   [ Yaroslav Halchenko ]
+  * New upstream release
+    - addresses gcc 4.7 compatibility (Closes: #682652)
   * export HOME=$(CURDIR)/build to not rely on user's writable HOME
     (was triggered by some tests leading to FTBFS)
+  * debian/watch
+    - allow fetching beta-releases
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 18 Jul 2012 21:41:44 -0400
 
