--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.17~beta1+git665-gf5bfa12-1) experimental; urgency=low
+
+  * New upstream pre-release snapshot
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 23 Aug 2012 09:47:01 -0400
+
 cython (0.17~beta1-2) experimental; urgency=low
 
   * Restrict actions of dh_python* helpers to corresponding cython*
