upstream adopted up_upstream_cache_ext_suffix -- removing
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@9074 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 cython (0.17~beta1+git665-gf5bfa12-1) experimental; urgency=low
 
   * New upstream pre-release snapshot
+    - adopted up_upstream_cache_ext_suffix
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 23 Aug 2012 09:47:01 -0400
 
