--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.17~beta4+git15-g6457431-1) experimental; urgency=low
+
+  * New upstream pre-release snapshot
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 31 Aug 2012 10:33:42 -0400
+
 cython (0.17~beta3-1) experimental; urgency=low
 
   * New upstream pre-release beta
