--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 cython (0.17~beta4+git15-g6457431-1) experimental; urgency=low
 
   * New upstream pre-release snapshot
+  * debian/rules:
+    - assure-changelogs upon clean to don't wait for crash at the end of
+      build/test due to a missing changelog
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 31 Aug 2012 10:33:42 -0400
 
