changelog for 0.17 release
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@9176 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.17-1) experimental; urgency=low
+
+  * New upstream release
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 16 Sep 2012 16:41:46 -0400
+
 cython (0.17~beta4+git15-g6457431-1) experimental; urgency=low
 
   * New upstream pre-release snapshot
