New bugfix release -- changelog and release notes
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@9178 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.17.1-1) experimental; urgency=low
+
+  * Bugfix release
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 29 Sep 2012 19:01:53 -0400
+
 cython (0.17-1) experimental; urgency=low
 
   * New upstream release
