--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+cython (0.17.3-1) experimental; urgency=low
+
+  * Bugfix upstream release:
+    - upstream includes all previously shipped patches
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 20 Dec 2012 12:34:19 -0500
+
 cython (0.17.2-1+bnd1) UNRELEASED; urgency=low
 
   * debian/patches/squeeze-dsc-patch for a non-official backport build for
