--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@ cython (0.17.3-1) experimental; urgency=low
     - provides CHANGES.rst (was missing from source distribution,
       up_changes_rst patch provides a copy), so all machinery for fetching
       changelogs from wiki is removed
+  * Pruning shipped underscore.js, -doc depends on libjs-underscore now
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 20 Dec 2012 12:34:19 -0500
 
